# visgator

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pdm.toml  pyproject.toml  report.ipynb  requirements.txt  test.ipynb
config/: GroundingDINO_SwinB_cfg.py  GroundingDINO_SwinT_OGC.py  example.json  example.yaml  local.yaml  prompt.txt  server.yaml
datasets/refcocog/: __init__.py  _config.py  _dataset.py  _structs.py
deepsight/data/dataset/: __init__.py  _config.py  _dataloader.py  _dataset.py
deepsight/data/structs/: __init__.py  _batch.py  _boxes.py  _graph.py  _image.py  _od.py  _rec.py
deepsight/data/transformations/: __init__.py  _compose.py  _geometry.py  _pixel.py  _transformation.py  _utils.py
deepsight/engines/tester/: __init__.py  _config.py  _tester.py
deepsight/engines/trainer/: __init__.py  _config.py  _structs.py  _trainer.py
deepsight/lr_schedulers/: _config.py  _lr_scheduler.py
deepsight/lr_schedulers/torch/: _config.py  _lr_scheduler.py
deepsight/measures/: __init__.py  _structs.py
deepsight/measures/functional/: __init__.py  _giou.py  _infonce.py  _iou.py  _l1.py  _utils.py
deepsight/measures/losses/: __init__.py  _giou.py  _infonce.py  _iou.py  _l1.py  _tracker.py
deepsight/measures/metrics/: __init__.py  _giou.py  _iou.py
deepsight/modeling/detectors/: __init__.py  _owlvit.py  _yolo.py
deepsight/modeling/layers/: __init__.py  _layerscale.py
deepsight/modeling/layers/clip/: __init__.py  _misc.py  _text.py  _vision.py
deepsight/modeling/layers/gnn/: __init__.py  _gat.py
deepsight/modeling/layers/position/: __init__.py  _box.py  _heatmaps.py  _pairwise.py  _pos2d.py
deepsight/modeling/parsers/: gpt.py
deepsight/modeling/pipeline/: __init__.py  _config.py  _criterion.py  _model.py  _pipeline.py  _postprocessor.py  _preprocessor.py
deepsight/optimizers/: _config.py  _optimizer.py
deepsight/optimizers/torch/: __init__.py  _config.py  _optimizer.py
deepsight/utils/: __init__.py  _config.py  _misc.py  wandb.py
deepsight/utils/protocols/: __init__.py  _moveable.py
deepsight/utils/torch/: __init__.py  _batched2d.py  _batched3d.py  _device.py  _dtype.py  _graph.py
docs/: report.ipynb  wiki.md
docs/img/: sgg.drawio
docs/src/: architecture.drawio  azure_setup.sh
projects/owlvit/configs/: test.py
projects/owlvit/modeling/: _config.py  _criterion.py  _model.py  _pipeline.py  _postprocessor.py
projects/sgg/configs/: sgg_24ep.py  test.py
projects/sgg/configs/models/: sgg_owlvit_d3.py
projects/sgg/modeling/: __init__.py  _config.py  _criterion.py  _decoder.py  _model.py  _pipeline.py  _postprocessor.py  _preprocessor.py  _structs.py
projects/yoloclip/configs/: test.py
projects/yoloclip/modeling/: __init__.py  _config.py  _criterion.py  _model.py  _pipeline.py  _preprocessor.py
src/visgator/: __main__.py  test.py
src/visgator/datasets/: __init__.py  _config.py  _dataset.py  _generator.py
src/visgator/datasets/refcocog/: __init__.py  _config.py  _dataset.py  _generator.py  _misc.py
src/visgator/engines/evaluator/: __init__.py  _config.py  _evaluator.py
src/visgator/engines/trainer/: __init__.py  _checkpoint.py  _config.py  _misc.py  _trainer.py
src/visgator/lr_schedulers/: _config.py  _lr_scheduler.py
src/visgator/lr_schedulers/torch/: _config.py  _lr_scheduler.py
src/visgator/metrics/: __init__.py  _iou.py  _jaccard.py  _tracker.py
src/visgator/models/: __init__.py  _config.py  _criterion.py  _model.py  _postprocessor.py
src/visgator/models/baseline/: __init__.py  _config.py  _criterion.py  (+1 more)
src/visgator/optimizers/: _config.py  _optimizer.py
src/visgator/utils/: __init__.py  _factory.py  batch.py  device.py  factory.py  logging.py  misc.py  torch.py
tools/: test.py  train.py
(+63 files in other folders)
