[tool.pdm]

[tool.pdm.dev-dependencies]
lint = ["black>=23.3.0", "ruff>=0.0.263", "mypy>=1.2.0", "pre-commit>=3.3.1"]
types = [
    "types-tqdm>=4.65.0.1",
    "types-requests>=2.31.0.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]


[tool.ruff]
select = ["F", "E", "I", "W"]
fix = true
ignore = ["F722"]


[project]
name = "visgator"
version = "0.1.0"
description = ""
authors = [
    { name = "Francesco Gentile", email = "francesco.gentile@studenti.unitn.it" },
    { name = "Diego Calanzone", email = "diego.calanzone@studenti.unitn.it" },
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.1",
    "transformers>=4.28.1",
    "ultralytics>=8.0.90",
    "tqdm>=4.65.0",
    "jaxtyping>=0.2.15",
    "torchmetrics>=0.11.4",
    "open-clip-torch>=2.20.0",
    "pyserde>=0.10.6",
    "openai>=0.27.7",
    "SceneGraphParser>=0.1.0",
    "rustworkx>=0.12.1",
    "wandb>=0.15.3",
    "ruamel-yaml>=0.17.31",
]
requires-python = ">=3.10"
license = { text = "MIT" }
